--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-bulma-components": "^4.0.7",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -25,6 +27,7 @@
     "react-usestateref": "^1.0.5",
     "redux": "^4.1.0",
     "redux-utils": "^1.3.15",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
